[package]
name = "FrankBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
openssl = ["hyper-tls"]
rustls = ["hyper-rustls"]
default = ["openssl"]

[dependencies]
bytes = "1.0.1"

tokio = { version = "1.2", features = ["macros", "time", "fs", "rt-multi-thread"] }
tracing = "0.1.23"
tracing-futures = "0.2"
multipart = { version = "0.17", default-features = false, features = ["client"] }

telegram-bot = "0.8"

hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = { version = "0.5", optional = true  }
futures = "0.3"
hyper-rustls = { version = "0.22", optional = true }
tracing-subscriber = "0.2.15"


